# netflix

./: .gitignore  CMakeLists.txt  README.md  Readme-web  docker-compose.yml  package-lock.json  package.json  server.js  settings.gradle
Server/: DeleteMoviesCommand.cpp  DeleteMoviesCommandTests.cpp  GetRecommendMoviesCommandTests.cpp  HelpCommand.cpp  PatchCommand.cpp  PatchMovieCommandTests  PostCommand.cpp  server
app/: AndroidManifest.xml  build.gradle  build.gradle.kts
backend/: Dockerfile  docker-compose.yml  package-lock.json  package.json  server.js
backend/Server/: App.cpp  GetRecommendMoviesCommand.cpp  PatchMovieCommandTest.cpp  PostMovieCommandTest.cpp
backend/config/: .env
backend/controllers/: movie.js  recommendation.js  users.js
backend/middleware/: checkRole.js  multer2.js
backend/models/: category.js  users.js
backend/routes/: movie.js  users.js
backend/services/: movie.js  recommendation.js  users.js
backend/utils/: jwt.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
netflix-master/: .gitignore  package-lock.json  package.json
netflix-master/Server/: Db.cpp  DeleteMoviesCommand.h  DeleteMoviesCommandTests  HelpCommand.h  ICommand.h  PatchCommand.h  PostCommand.h  PostCommandTests  server.cpp
netflix-master/backend/: package-lock.json  package.json  server.js
netflix-master/src/: App.js  Dockerfile.react  MovieList.css  ThemeContext.js
public/: index.html
src/: App.js  MovieList.css  ThemeContext.js  index.js  package.json
src/pages/: HomePage.js  (+9 more)
wiki/: README-android.md  README-web.md
(+205 files in other folders)
